# cw32l012_hal_cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cw32l012.svd  cw32l012_flash.ld  startup_cw32l012x8.s
Drivers/CMSIS/cw32l012/inc/: cw32l012.h  system_cw32l012.h
Drivers/CMSIS/cw32l012/src/: system_cw32l012.c
Drivers/CW32L0xx_HAL_Driver/Inc/: cw32l012_hal.h  cw32l012_hal_adc.h  cw32l012_hal_conf.h  cw32l012_hal_cordic.h  cw32l012_hal_crc.h  cw32l012_hal_dac.h  cw32l012_hal_debug.h  cw32l012_hal_def.h  cw32l012_hal_digitalsign.h  cw32l012_hal_dma.h  cw32l012_hal_eau.h  cw32l012_hal_flash.h  cw32l012_hal_gpio.h  cw32l012_hal_gpio_ex.h  cw32l012_hal_halltim.h  cw32l012_hal_i2c.h  cw32l012_hal_irmod.h  cw32l012_hal_iwdt.h  cw32l012_hal_lptim.h  cw32l012_hal_lvd.h  cw32l012_hal_opa.h  cw32l012_hal_pwr.h  cw32l012_hal_ram.h  cw32l012_hal_rcc.h  cw32l012_hal_rtc.h  cw32l012_hal_spi.h  cw32l012_hal_tim.h  cw32l012_hal_uart.h  cw32l012_hal_vc.h  cw32l012_hal_wwdt.h
Drivers/CW32L0xx_HAL_Driver/Src/: cw32l012_hal.c  cw32l012_hal_adc.c  cw32l012_hal_cordic.c  cw32l012_hal_crc.c  cw32l012_hal_dac.c  cw32l012_hal_debug.c  cw32l012_hal_digitalsign.c  cw32l012_hal_dma.c  cw32l012_hal_eau.c  cw32l012_hal_flash.c  cw32l012_hal_gpio.c  cw32l012_hal_gpio_ex.c  cw32l012_hal_halltim.c  cw32l012_hal_i2c.c  cw32l012_hal_irmod.c  cw32l012_hal_iwdt.c  cw32l012_hal_lptim.c  cw32l012_hal_lvd.c  cw32l012_hal_opa.c  cw32l012_hal_pwr.c  cw32l012_hal_ram.c  cw32l012_hal_rcc.c  cw32l012_hal_rtc.c  cw32l012_hal_spi.c  cw32l012_hal_tim.c  cw32l012_hal_uart.c  cw32l012_hal_vc.c  cw32l012_hal_wwdt.c
cmake/: gcc-arm-none-eabi.cmake
cmake/cw32cubemx/: CMakeLists.txt
core/inc/: cw32l012_it.h  main.h
core/src/: cw32l012_hal_msp.c  cw32l012_it.c  main.c  syscalls.c
openocd/: cw32l012.cfg
